src/main/java/com/example/digital_wallet_system/errors/exceptions/public_Exceptions/DuplicateResourceException.java
package com.example.digital_wallet_system.errors.exceptions.public_Exceptions;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) {
        super(message);
    }
}
